added a div to make our page more organized

--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   </head>
   <body>
     <h1>Our Boring Lecture</h1>
+    <div class="intro">
+      <h2>Lecture professors</h2>
 
-    <h2 class="intro">Lecture professors</h2>
+      <p> The professors that will be presenting this lecture are Dr.Mikey and Dr.Sylvja</p>
 
-    <p class="intro">The professors that will be presenting this lecture are Dr.Mikey and Dr.Sylvja</p>
+      <p>Here is where the lecture will take place!</p>
 
-    <p class="intro">Here is where the lecture will take place!</p>
-
-    <img src="img/lectureHall.jpg" alt="A lecture hall" class="intro">
-    
+      <img src="img/lectureHall.jpg" alt="A lecture hall">
+    </div>
     <p class="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu tempor metus. Duis congue viverra augue, nec condimentum sapien dapibus ac. Sed id rutrum est. Quisque sed est viverra, dictum erat quis, malesuada nunc. Sed sollicitudin dui libero. Quisque sodales mauris eu tortor egestas sodales quis in metus. Nunc neque dui, faucibus eu malesuada id, ultricies sit amet ante. Praesent euismod sollicitudin sapien, at dictum erat mattis nec. Phasellus pellentesque, dolor in elementum rutrum, lectus risus venenatis ipsum, et molestie risus diam eu dui. Quisque vitae felis malesuada, lobortis libero semper, varius magna.
     Phasellus tristique magna quis libero varius maximus. Sed non placerat arcu. Nullam nisl augue, elementum eget diam in, posuere gravida lorem. Curabitur augue ante, dapibus quis efficitur vel, bibendum id diam. Proin sollicitudin est non nunc fermentum, ac blandit orci ultrices. Praesent interdum pretium neque, eget tincidunt lectus feugiat fermentum. Aliquam porttitor odio vitae metus mollis volutpat. Phasellus id scelerisque orci, nec vehicula magna. Praesent et vehicula metus, vitae commodo tellus.</p>
   
