Added more files, edited README, added jQuery functions to highlight paragraphs

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Boring Lecture</title>
   </head>
   <body>
@@ -15,13 +18,13 @@
 
       <img src="img/lectureHall.jpg" alt="A lecture hall">
     </div>
-    <p class="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu tempor metus. Duis congue viverra augue, nec condimentum sapien dapibus ac. Sed id rutrum est. Quisque sed est viverra, dictum erat quis, malesuada nunc. Sed sollicitudin dui libero. Quisque sodales mauris eu tortor egestas sodales quis in metus. Nunc neque dui, faucibus eu malesuada id, ultricies sit amet ante. Praesent euismod sollicitudin sapien, at dictum erat mattis nec. Phasellus pellentesque, dolor in elementum rutrum, lectus risus venenatis ipsum, et molestie risus diam eu dui. Quisque vitae felis malesuada, lobortis libero semper, varius magna.
+    <p id="p1" class="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu tempor metus. Duis congue viverra augue, nec condimentum sapien dapibus ac. Sed id rutrum est. Quisque sed est viverra, dictum erat quis, malesuada nunc. Sed sollicitudin dui libero. Quisque sodales mauris eu tortor egestas sodales quis in metus. Nunc neque dui, faucibus eu malesuada id, ultricies sit amet ante. Praesent euismod sollicitudin sapien, at dictum erat mattis nec. Phasellus pellentesque, dolor in elementum rutrum, lectus risus venenatis ipsum, et molestie risus diam eu dui. Quisque vitae felis malesuada, lobortis libero semper, varius magna.
     Phasellus tristique magna quis libero varius maximus. Sed non placerat arcu. Nullam nisl augue, elementum eget diam in, posuere gravida lorem. Curabitur augue ante, dapibus quis efficitur vel, bibendum id diam. Proin sollicitudin est non nunc fermentum, ac blandit orci ultrices. Praesent interdum pretium neque, eget tincidunt lectus feugiat fermentum. Aliquam porttitor odio vitae metus mollis volutpat. Phasellus id scelerisque orci, nec vehicula magna. Praesent et vehicula metus, vitae commodo tellus.</p>
   
-    <p class="loremipsum">Loremipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu tempor metus. Duis congue viverra augue, nec condimentum sapien dapibus ac. Sed id rutrum est. Quisque sed est viverra, dictum erat quis, malesuada nunc. Sed sollicitudin dui libero. Quisque sodales mauris eu tortor egestas sodales quis in metus. Nunc neque dui, faucibus eu malesuada id, ultricies sit amet ante. Praesent euismod sollicitudin sapien, at dictum erat mattis nec. Phasellus pellentesque, dolor in elementum rutrum, lectus risus venenatis ipsum, et molestie risus diam eu dui. Quisque vitae felis malesuada, lobortis libero semper, varius magna.
+    <p id="p2" class="loremipsum">Loremipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu tempor metus. Duis congue viverra augue, nec condimentum sapien dapibus ac. Sed id rutrum est. Quisque sed est viverra, dictum erat quis, malesuada nunc. Sed sollicitudin dui libero. Quisque sodales mauris eu tortor egestas sodales quis in metus. Nunc neque dui, faucibus eu malesuada id, ultricies sit amet ante. Praesent euismod sollicitudin sapien, at dictum erat mattis nec. Phasellus pellentesque, dolor in elementum rutrum, lectus risus venenatis ipsum, et molestie risus diam eu dui. Quisque vitae felis malesuada, lobortis libero semper, varius magna.
     Phasellus tristique magna quis libero varius maximus. Sed non placerat arcu. Nullam nisl augue, elementum eget diam in, posuere gravida lorem. Curabitur augue ante, dapibus quis efficitur vel, bibendum id diam. Proin sollicitudin est non nunc fermentum, ac blandit orci ultrices. Praesent interdum pretium neque, eget tincidunt lectus feugiat fermentum. Aliquam porttitor odio vitae metus mollis volutpat. Phasellus id scelerisque orci, nec vehicula magna. Praesent et vehicula metus, vitae commodo tellus.</p>
 
-    <p class="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu tempor metus. Duis congue viverra augue, nec condimentum sapien dapibus ac. Sed id rutrum est. Quisque sed est 
+    <p id="p3" class="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu tempor metus. Duis congue viverra augue, nec condimentum sapien dapibus ac. Sed id rutrum est. Quisque sed est 
     viverra, dictum erat quis, malesuada nunc. Sed sollicitudin dui libero. Quisque sodales mauris eu tortor egestas sodales quis in metus. Nunc neque dui, faucibus eu malesuada id, ultricies sit amet ante. Praesent euismod sollicitudin sapien, at dictum erat mattis nec. Phasellus pellentesque, dolor in elementum rutrum, lectus risus venenatis ipsum, et molestie risus diam eu dui. Quisque vitae felis malesuada, lobortis libero semper, varius magna.
     Phasellus tristique magna quis libero varius maximus. Sed non placerat arcu. Nullam nisl augue, elementum eget diam in, posuere gravida lorem. Curabitur augue ante, dapibus quis efficitur vel, bibendum id diam. Proin sollicitudin est non nunc fermentum, ac blandit orci ultrices. Praesent interdum pretium neque, eget tincidunt lectus feugiat fermentum. Aliquam 
     porttitor odio vitae metus mollis volutpat. Phasellus id scelerisque orci, nec vehicula magna. Praesent et vehicula metus, vitae commodo tellus.</p>
